--- a/src/styles/GameBoard.scss
+++ b/src/styles/GameBoard.scss
@@ -1,34 +1,56 @@
 .game-board {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr); // Creates 12 columns
-    grid-gap: 10px; // Adjust the gap between cards
-    padding: 20px; // Add some padding around the grid
-    max-width: 1200px; // Set a max-width for the grid
-    margin: auto; // Center the grid horizontally
+  display: grid;
+  grid-template-columns: repeat(6, minmax(0, 1fr)); // 6 columns for all sizes
+  grid-gap: 10px; // Gap between cards
+  padding: 20px; // Padding around the grid
+  margin: auto; // Center the grid horizontally
+  max-width: calc(100vw - 40px); // Set a max-width based on the viewport width
+  box-sizing: border-box; // Include padding in the width calculation
+}
+
+.card-container {
+  animation: appear 0.5s ease-in-out;
+  animation-delay: calc(var(--card-index) * 50ms); // Delay based on card index
+  // Define any specific card styles here, such as width, height, etc.
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
   }
-  
-  @keyframes appear {
-    from {
-      opacity: 0;
-      transform: translateY(-20px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
-  
+}
+
+// Media query for tablets
+@media (max-width: 768px) {
   .game-board {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr); // Creates 12 columns
-    grid-gap: 10px;
-    padding: 20px;
-    max-width: 1200px;
-    margin: auto;
-  
-    .card-container {
-      animation: appear 0.5s ease-in-out;
-      animation-delay: calc(var(--card-index) * 50ms); // Delay based on card index
-    }
+    grid-template-columns: repeat(4, minmax(0, 1fr)); // Adjust to 4 columns on smaller screens
   }
-  
+}
+
+// Media query for mobile
+@media (max-width: 480px) {
+  .game-board {
+    grid-template-columns: repeat(3, minmax(0, 1fr)); // Adjust to 3 columns on mobile screens
+  }
+}
+
+@keyframes winAnimation {
+  0%, 100% { 
+    transform: scale(1) rotate(0deg);
+    background-color: #ffffff;
+  }
+  50% { 
+    transform: scale(1.1) rotate(5deg);
+    background-color: #ffffe0; 
+  }
+}
+
+.win-animation {
+  animation: winAnimation 2s ease-in-out 5;
+  box-shadow: 0 0 15px rgba(0, 255, 0, 0.7); 
+}
